bloonix-server (0.49) released at 2016-03-25

    * bloonix-update-agent-host-config: added options 'test' and 'when'.

bloonix-server (0.48) released at 2016-03-20

    * Fixed: update the service status if the agent was dead
      and the service is a volatile check.

bloonix-server (0.47) released at 2016-02-17

    * Fixed: retry_interval of services were ignored.

bloonix-server (0.46) released at 2016-02-13

    * Fixed: check maintenance version after the first
      database connection.

bloonix-server (0.45) released at 2016-02-11

    * Improved check of the database schema version.

bloonix-server (0.44) released at 2016-02-01

    * Fixed: max_sms were ignored of hosts and companies.

bloonix-server (0.43) released at 2016-01-10

    * Fixed bloonix-get-sms-count.

bloonix-server (0.42) released at 2015-11-15

    * Kicked deprecated fcgi support.
    * Fixed paths in systemd files if the server
      is installed manually.
    * Implemented Bloonix::NetAddr to parse IP ranges.

bloonix-server (0.41) released at 2015-09-18

    * Fixed uninitialized variable IPADDR6.

bloonix-server (0.40) released at 2015-09-17

    * Fixed tags that were not added to events.
    * Added variable IPADDR6.

bloonix-server (0.39) released at 2015-09-14

    * Enabled IPv6 support.

bloonix-server (0.38) released at 2015-09-06

    * status_nok_since is now updated correctly in table host.

bloonix-server (0.37) released at 2015-09-01

    * Fixed: force_timed_event is now resetted.

bloonix-server (0.36) released at 2015-09-01

    * Added field force_event to table service.
    * The server disconnects now if the db schema version changed.

bloonix-server (0.35) released at 2015-08-31

    * Fixed: try to prevent ntp issues by calculating the next service check.
    * If attempt_max is set to 0 then notifications are disabled.

bloonix-server (0.34) released at 2015-08-18

    * Fixed: Can't modify non-lvalue subroutine call at Server.pm line 1379.
