@@ -9,7 +9,6 @@ if (!-e "Makefile") {
 }
 
 my $o_prefix           = "/usr/local";
-my $o_cachedir         = "/var/cache";
 my $o_confdir          = "/etc";
 my $o_build_package    = 0;
 my $o_initdir          = "/etc/init.d";
@@ -20,7 +19,6 @@ my $o_srvdir           = "/srv";
 my $o_perl             = "/usr/bin/perl";
 my $o_perl_prefix      = "/usr/local";
 my $o_perl_installdirs = "site";
-my $o_without_perl     = 0;
 my $o_user             = "bloonix";
 my $o_group            = "bloonix";
 my $o_ssl_ca_path      = "/etc/ssl/certs";
@@ -29,7 +27,6 @@ my $o_help             = 0;
 
 GetOptions(
     "prefix=s"           => \$o_prefix,
-    "cachedir=s"         => \$o_cachedir,
     "confdir=s"          => \$o_confdir,
     "initdir=s"          => \$o_initdir,
     "libdir=s"           => \$o_libdir,
@@ -39,7 +36,6 @@ GetOptions(
     "perl=s"             => \$o_perl,
     "perl-prefix=s"      => \$o_perl_prefix,
     "perl-installdirs=s" => \$o_perl_installdirs,
-    "without-perl"       => \$o_without_perl,
     "build-package"      => \$o_build_package,
     "user=s"             => \$o_user,
     "group=s"            => \$o_group,
@@ -52,7 +48,6 @@ if ($o_help) {
     print "\nUsage: perl Configure.PL [ OPTIONS ]\n\n";
     print "Configure options:\n\n";
     print "  --prefix DIR (default: $o_prefix)\n";
-    print "  --cachedir DIR (default: $o_cachedir)\n";
     print "  --confdir DIR (default: $o_confdir)\n";
     print "  --initdir DIR (default: $o_initdir)\n";
     print "  --libdir DIR (default: $o_libdir)\n";
@@ -62,7 +57,6 @@ if ($o_help) {
     print "  --perl PERL EXECUTABLE (default: $o_perl)\n";
     print "  --perl-prefix DIR (default: $o_perl_prefix)\n";
     print "  --perl-installdirs INSTALLDIRS (default: $o_perl_installdirs)\n";
-    print "  --without-perl (default: $o_without_perl)\n";
     print "  --user user (default: $o_user)\n";
     print "  --group group (default: $o_group)\n";
     print "  --ssl-ca-path (default: $o_ssl_ca_path)\n";
@@ -86,7 +80,6 @@ print "Writing Makefile.config ...\n";
 
 print $fh <<EOF;
 PREFIX=\$(DESTDIR)$o_prefix
-CACHEDIR=\$(DESTDIR)$o_cachedir
 CONFDIR=\$(DESTDIR)$o_confdir
 INITDIR=\$(DESTDIR)$o_initdir
 LIBDIR=\$(DESTDIR)$o_libdir
@@ -98,7 +91,6 @@ BUILDPKG=$o_build_package
 PERL=$o_perl
 PERL_PREFIX=\$(DESTDIR)$o_perl_prefix
 PERL_INSTALLDIRS=$o_perl_installdirs
-WITHOUT_PERL=$o_without_perl
 USERNAME=$o_user
 GROUPNAME=$o_group
 SSL_CA_PARAM=$ssl_param
