@@ -1,5 +1,4 @@
 PREFIX=$(DESTDIR)/usr/local
-CACHEDIR=$(DESTDIR)/var/cache
 CONFDIR=$(DESTDIR)/etc
 INITDIR=$(DESTDIR)/etc/init.d
 LIBDIR=$(DESTDIR)/var/lib
@@ -11,7 +10,6 @@ BUILDPKG=0
 PERL=/usr/bin/perl
 PERL_PREFIX=$(DESTDIR)/usr/local
 PERL_INSTALLDIRS=site
-WITHOUT_PERL=0
 USERNAME=bloonix
 GROUPNAME=bloonix
 SSL_CA_PARAM=ssl_ca_path
