@@ -1,38 +1,44 @@
 #!/bin/sh
 
-set -e
-WITH_SYSTEMD=0
+if [ -e "/lib/systemd" ] ; then
+    cp -a /usr/lib/bloonix/etc/systemd/bloonix-server.service /lib/systemd/system/bloonix-server.service
+    cp -a /usr/lib/bloonix/etc/systemd/bloonix-srvchk.service /lib/systemd/system/bloonix-srvchk.service
+    systemctl daemon-reload
+else
+    cp -a /usr/lib/bloonix/etc/init.d/bloonix-server /etc/init.d/bloonix-server
+    cp -a /usr/lib/bloonix/etc/init.d/bloonix-srvchk /etc/init.d/bloonix-srvchk
+fi
 
-__configure() {
-    echo "Configure bloonix with systemd=$WITH_SYSTEMD"
-
-    if [ $WITH_SYSTEMD -eq 1 ] ; then
+if [ "$1" = "configure" ] ; then
+    if [ -e "/lib/systemd" ] ; then
+        echo "Configure bloonix with systemd"
         systemctl preset bloonix-srvchk.service
         systemctl preset bloonix-server.service
     else
+        echo "Configure bloonix with update-rc.d"
         update-rc.d bloonix-server defaults >/dev/null
         update-rc.d bloonix-srvchk defaults >/dev/null
     fi
-}
-
-case "$1" in
-    configure) __configure ;;
-esac
+fi
 
 /usr/bin/bloonix-init-server
 
 echo "Starting (condrestart) bloonix-server..";
 
-if [ $WITH_SYSTEMD -eq 1 ] ; then
+if [ -e "/lib/systemd" ] ; then
     systemctl condrestart bloonix-server.service
+elif [ -e "/usr/share/upstart" ] ; then
+    service bloonix-server condrestart
 else
     /etc/init.d/bloonix-server condrestart
 fi
 
 echo "Starting (condrestart) bloonix-srvchk..";
 
-if [ $WITH_SYSTEMD -eq 1 ] ; then
+if [ -e "/lib/systemd" ] ; then
     systemctl condrestart bloonix-srvchk.service
+elif [ -e "/usr/share/upstart" ] ; then
+    service bloonix-srvchk condrestart
 else
     /etc/init.d/bloonix-srvchk condrestart
 fi
