@@ -1,8 +1,9 @@
 bloonix-server (0.49-1) unstable; urgency=low
 
     * bloonix-update-agent-host-config: added options 'test' and 'when'.
+    * Fixed systemd/sysvinit/upstart installation routines.
 
- -- Jonny Schulz <js@bloonix.de>  Fri, 25 Mar 2016 15:35:54 +0100
+ -- Jonny Schulz <js@bloonix.de>  Mon, 28 Mar 2016 19:35:54 +0200
 
 bloonix-server (0.48-1) unstable; urgency=low
 
