@@ -1,6 +1,7 @@
 bloonix-server (0.49) released at 2016-03-25
 
     * bloonix-update-agent-host-config: added options 'test' and 'when'.
+    * Fixed systemd/sysvinit/upstart installation routines.
 
 bloonix-server (0.48) released at 2016-03-20
 
